--- a/frontend/admin-app/src/containers/homeStyle.css
+++ b/frontend/admin-app/src/containers/homeStyle.css
@@ -3,7 +3,29 @@
     top: 0;
     bottom: 0;
     left: 0;
+    /* right:0; */
     background-color: #eee;
     padding-top: 60px;
     box-shadow: inset 0 0 2px gray;
+}
+
+.sidebar ul {
+    margin: 0;
+    padding: 0;
+}
+.sidebar ul li {
+    list-style: none;
+}
+.sidebar ul li a {
+    display: block;
+    color: #1261a0;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    margin: 5px 0px 5px 10px;
+    border-radius: 5px 0 0px 5px;
+    text-decoration: none;
+}
+.sidebar ul li a.active {
+    background-color:  #1261a0;
+    color: powderblue;
 }
