user app initial commit

--- a/frontend/admin-app/src/containers/productStyle.css
+++ b/frontend/admin-app/src/containers/productStyle.css
@@ -1,12 +1,12 @@
 .productImageContainer{
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     overflow: hidden;
 }
 
 .productImageContainer img{
-    width: 200px;
-    height: 200px;
-    padding: 20px;
+    width: 100px;
+    height: 100px;
+    /* padding: 20px; */
     object-fit: contain;
 }
