User products list done

--- a/user-app/src/components/MenuHeader/menuHeaderStyle.css
+++ b/user-app/src/components/MenuHeader/menuHeaderStyle.css
@@ -32,7 +32,7 @@
 
 .menuHeader > ul > li > ul {
     position: absolute;
-    display: block;
+    display: none;
     right: 0;
     left: 0;
     border: 1px solid #cecece;
